--- a/contacts.html
+++ b/contacts.html
@@ -111,9 +111,9 @@
 						      <h2>Gregory MAXWELL</h2>
 						      <h3>Senior Technical Consultant</h3>
 					      </div>
-					        <div class="info-bio">Certified: SIR / VR / R&C / TPRM / BCM
-                                Experienced: SIR / VR / ITSM
-                                Interested: SecOps / IRM
+					        <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM / BCM
+                                <strong>Experienced:</strong> SIR / VR / ITSM
+                                <strong>Interested:</strong> SecOps / IRM
                                 gregory.maxwell@devoteam.com
 					        </div>
 					          <div class="info-social">
@@ -143,9 +143,9 @@
 						        <h2>Ghita El Quammah</h2>
 						        <h3>Senior Technical Consultant</h3>
 					        </div>
-					          <div class="info-bio">Certified: SIR / VR / R&C / TPRM
-                                Experienced: SIR / VR / GRC / IRM
-                                Interested: SecOps / IRM
+					          <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM
+                                <strong>Experienced:</strong> SIR / VR / GRC / IRM
+                                <strong>Interested:</strong> SecOps / IRM
                                 ghita.el.quammah@devoteam.com                      
 					          </div>
 					            <div class="info-social">
@@ -183,9 +183,9 @@
 						  <h2>Stephane BILONG</h2>
 						  <h3>Technical Consultant</h3>
 					  </div>
-					    <div class="info-bio">Certified: SIR / VR
-                                Experienced: 
-                                Interested: 
+					    <div class="info-bio"><strong>Certified:</strong> SIR / VR
+                                <strong>Experienced: </strong>
+                                <strong>Interested:</strong> 
                                 stephane.bilong@devoteam.com
 					    </div>
               <div class="info-social">
@@ -216,9 +216,9 @@
 						      <h2>Fatima zohra SAMRAN</h2>
 						      <h3>Technical Consultant</h3>
 					      </div>
-                  <div class="info-bio">Certified: CSA / CAD / ITSM / SIR / VR / RC / TPRM / EM / HR
-                                        Experienced: ITSM / SIR 
-                                        Interested: SIR / VR / RC / TPRM
+                  <div class="info-bio"><strong>Certified:</strong> SIR / VR / RC / TPRM / EM
+                                        <strong>Experienced:</strong> ITSM / SIR 
+                                        <strong>Interested:</strong> SIR / VR / RC / TPRM
                                         fatima.samran@devoteam.com
                   </div>
                     <div class="info-social">
@@ -249,9 +249,9 @@
                 <h2>Laëtitia MICHEL</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: CSA /CAD
-                                      Experienced: SIR
-                                      Interested: SIR
+                <div class="info-bio"><strong>Certified: </strong>CSA /CAD
+                                      <strong>Experienced:</strong> SIR
+                                      <strong>Interested: </strong>SIR
                                       laetitia.michel@devoteam.com
                 </div>
                   <div class="info-social">
@@ -282,9 +282,9 @@
                 <h2>Huachen Zhang</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: SIR / VR
-                                      Experienced: VR
-                                      Interested: VR / SIR
+                <div class="info-bio"><strong>Certified:</strong> SIR / VR
+                                      <strong>Experienced:</strong> VR
+                                      <strong>Interested:</strong> VR / SIR
                                       huachen.zhang@devoteam.com
                 </div>
                   <div class="info-social">
@@ -315,9 +315,9 @@
                 <h2>Ahmed Zaki BENNECER</h2>
                 <h3>Solution Engineer</h3>
               </div>
-                <div class="info-bio">Certified: ITSM - CAS - CAD
-                                      Experienced: 
-                                      Interested:
+                <div class="info-bio"><strong>Certified:</strong> ITSM - CAS - CAD
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       ahmed.bennecer@devoteam.com
                 </div>
                 <div class="info-social">
@@ -348,9 +348,9 @@
                 <h2>Axel LEJEUNE</h2>
                 <h3>Administrateur fontionnel</h3>
               </div>
-                <div class="info-bio">Certified: CSA / ITL 4 
-                                      Experienced: Functionnal Administrator and Performance Analytic Specialist
-                                      Interested: SecOps, IA
+                <div class="info-bio"><strong>Certified:</strong> CSA / ITL 4 
+                                      <strong>Experienced: </strong>Functionnal Administrator and Performance Analytic Specialist
+                                      <strong>Interested:</strong>SecOps, IA
                                       axel.lejeune@devoteam.com
                 </div>
                   <div class="info-social">
@@ -381,9 +381,9 @@
                 <h2>Hadrien MOREAU</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: CSA / ITIL 4 / VR / APM
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio"><strong>Certified:</strong> CSA / ITIL 4 / VR / APM
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       hadrien.moreau@devoteam.com
                 </div>
                   <div class="info-social">
@@ -414,9 +414,10 @@
                 <h2>Iklef MALLEM</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: CSA / ITOM / ITSM / PPM / HR
-                                      Experienced:
-                                      Interested: 
+                <div class="info-bio">
+                                      <strong>Certified:</strong> CSA / ITOM / ITSM / PPM / HR
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       iklef.mallem@devoteam.com
                 </div>
                   <div class="info-social">
@@ -447,9 +448,9 @@
                 <h2>Kevin CHEN</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: 
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio"><strong>Certified:</strong>
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       kevin.chen@devoteam.com
                 </div>
                   <div class="info-social">
@@ -486,9 +487,10 @@
                 <h2>Maïmouna Kanté</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: CSA/ITSM/HR / VR
-                                      Experienced: ITSM
-                                      Interested: SIR
+                <div class="info-bio">
+                                      <strong>Certified:</strong> CSA/ITSM/HR / VR
+                                      <strong>Experienced: </strong>ITSM
+                                      <strong>Interested:</strong>SIR
                                       maimouna.kante@devoteam.com
                 </div>
                   <div class="info-social">
@@ -519,9 +521,9 @@
                 <h2>Robin DEPARPE</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: 
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio"><strong>Certified:</strong>
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       robin.deparpe@devoteam.com
                 </div>
                   <div class="info-social">
@@ -552,9 +554,9 @@
                 <h2>Nadia Hamdaoui</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: 
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio"><strong>Certified:</strong>
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       nadia.hamdaoui@devoteam.com
                 </div>
                   <div class="info-social">
@@ -585,9 +587,10 @@
                 <h2>Monia KRIMAT</h2>
                 <h3>Technical Engineer ServiceNow</h3>
               </div>
-                <div class="info-bio">Certified: CSA / PPM / ITSM / HR 
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio">
+                                      <strong>Certified:</strong> CSA / PPM / ITSM / HR 
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       monia.krimat@devoteam.com
                 </div>
                   <div class="info-social">
@@ -619,9 +622,10 @@
                 <h2>Richard KOHLER</h2>
                 <h3>Senior Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: CSA / CAD / SIR 
-                                      Experienced: 
-                                      Interested: 
+                <div class="info-bio">
+                                      <strong>Certified:</strong> CSA / CAD / SIR
+                                      <strong>Experienced: </strong>
+                                      <strong>Interested:</strong>
                                       richard.kohler@devoteam.com
                 </div>
                   <div class="info-social">
