--- a/contacts.html
+++ b/contacts.html
@@ -113,7 +113,7 @@
 					      </div>
 					        <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM / BCM
                                 <strong>Experienced:</strong> SIR / VR / ITSM
-                                <strong>Interested:</strong> SecOps / IRM
+                                <strong>Interested by by:</strong> SecOps / IRM
                                 gregory.maxwell@devoteam.com
 					        </div>
 					          <div class="info-social">
@@ -145,7 +145,7 @@
 					        </div>
 					          <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM
                                 <strong>Experienced:</strong> SIR / VR / GRC / IRM
-                                <strong>Interested:</strong> SecOps / IRM
+                                <strong>Interested by by:</strong> SecOps / IRM
                                 ghita.el.quammah@devoteam.com                      
 					          </div>
 					            <div class="info-social">
@@ -183,9 +183,9 @@
 						  <h2>Stephane BILONG</h2>
 						  <h3>Technical Consultant</h3>
 					  </div>
-					    <div class="info-bio"><strong>Certified:</strong> SIR / VR
+					    <div class="info-bio"><strong>Certified:</strong> CSA / SIR / ITILv4
                                 <strong>Experienced: </strong>
-                                <strong>Interested:</strong> 
+                                <strong>Interested by by:</strong>  SecOps, Cyber Security, AI 
                                 stephane.bilong@devoteam.com
 					    </div>
               <div class="info-social">
@@ -218,7 +218,7 @@
 					      </div>
                   <div class="info-bio"><strong>Certified:</strong> SIR / VR / RC / TPRM / EM
                                         <strong>Experienced:</strong> ITSM / SIR 
-                                        <strong>Interested:</strong> SIR / VR / RC / TPRM
+                                        <strong>Interested by by:</strong> SIR / VR / RC / TPRM
                                         fatima.samran@devoteam.com
                   </div>
                     <div class="info-social">
@@ -251,7 +251,7 @@
               </div>
                 <div class="info-bio"><strong>Certified: </strong>CSA /CAD
                                       <strong>Experienced:</strong> SIR
-                                      <strong>Interested: </strong>SIR
+                                      <strong>Interested by by: </strong>SIR
                                       laetitia.michel@devoteam.com
                 </div>
                   <div class="info-social">
@@ -284,7 +284,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong> SIR / VR
                                       <strong>Experienced:</strong> VR
-                                      <strong>Interested:</strong> VR / SIR
+                                      <strong>Interested by:</strong> VR / SIR
                                       huachen.zhang@devoteam.com
                 </div>
                   <div class="info-social">
@@ -317,7 +317,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong> ITSM - CAS - CAD
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       ahmed.bennecer@devoteam.com
                 </div>
                 <div class="info-social">
@@ -350,7 +350,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong> CSA / ITL 4 
                                       <strong>Experienced: </strong>Functionnal Administrator and Performance Analytic Specialist
-                                      <strong>Interested:</strong>SecOps, IA
+                                      <strong>Interested by:</strong>SecOps, IA
                                       axel.lejeune@devoteam.com
                 </div>
                   <div class="info-social">
@@ -383,7 +383,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong> CSA / ITIL 4 / VR / APM
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       hadrien.moreau@devoteam.com
                 </div>
                   <div class="info-social">
@@ -417,7 +417,7 @@
                 <div class="info-bio">
                                       <strong>Certified:</strong> CSA / ITOM / ITSM / PPM / HR
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       iklef.mallem@devoteam.com
                 </div>
                   <div class="info-social">
@@ -450,7 +450,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong>
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       kevin.chen@devoteam.com
                 </div>
                   <div class="info-social">
@@ -490,7 +490,7 @@
                 <div class="info-bio">
                                       <strong>Certified:</strong> CSA/ITSM/HR / VR
                                       <strong>Experienced: </strong>ITSM
-                                      <strong>Interested:</strong>SIR
+                                      <strong>Interested by:</strong>SIR
                                       maimouna.kante@devoteam.com
                 </div>
                   <div class="info-social">
@@ -523,7 +523,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong>
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       robin.deparpe@devoteam.com
                 </div>
                   <div class="info-social">
@@ -556,7 +556,7 @@
               </div>
                 <div class="info-bio"><strong>Certified:</strong>
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       nadia.hamdaoui@devoteam.com
                 </div>
                   <div class="info-social">
@@ -590,7 +590,7 @@
                 <div class="info-bio">
                                       <strong>Certified:</strong> CSA / PPM / ITSM / HR 
                                       <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Interested by:</strong>
                                       monia.krimat@devoteam.com
                 </div>
                   <div class="info-social">
@@ -624,8 +624,8 @@
               </div>
                 <div class="info-bio">
                                       <strong>Certified:</strong> CSA / CAD / SIR
-                                      <strong>Experienced: </strong>
-                                      <strong>Interested:</strong>
+                                      <strong>Experienced: </strong> SIR
+                                      <strong>Interested by by:</strong> SecOps
                                       richard.kohler@devoteam.com
                 </div>
                   <div class="info-social">
