--- a/contacts.html
+++ b/contacts.html
@@ -113,7 +113,7 @@
 					      </div>
 					        <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM / BCM
                                 <strong>Experienced:</strong> SIR / VR / ITSM
-                                <strong>Interested by by:</strong> SecOps / IRM
+                                <strong>Interested by:</strong> SecOps / IRM
                                 gregory.maxwell@devoteam.com
 					        </div>
 					          <div class="info-social">
@@ -145,7 +145,7 @@
 					        </div>
 					          <div class="info-bio"><strong>Certified:</strong> SIR / VR / R&C / TPRM
                                 <strong>Experienced:</strong> SIR / VR / GRC / IRM
-                                <strong>Interested by by:</strong> SecOps / IRM
+                                <strong>Interested by:</strong> SecOps / IRM
                                 ghita.el.quammah@devoteam.com                      
 					          </div>
 					            <div class="info-social">
@@ -185,7 +185,7 @@
 					  </div>
 					    <div class="info-bio"><strong>Certified:</strong> CSA / SIR / ITILv4
                                 <strong>Experienced: </strong>
-                                <strong>Interested by by:</strong>  SecOps, Cyber Security, AI 
+                                <strong>Interested by:</strong>  SecOps, Cyber Security, AI 
                                 stephane.bilong@devoteam.com
 					    </div>
               <div class="info-social">
@@ -218,7 +218,7 @@
 					      </div>
                   <div class="info-bio"><strong>Certified:</strong> SIR / VR / RC / TPRM / EM
                                         <strong>Experienced:</strong> ITSM / SIR 
-                                        <strong>Interested by by:</strong> SIR / VR / RC / TPRM
+                                        <strong>Interested by:</strong> SIR / VR / RC / TPRM
                                         fatima.samran@devoteam.com
                   </div>
                     <div class="info-social">
@@ -251,7 +251,7 @@
               </div>
                 <div class="info-bio"><strong>Certified: </strong>CSA /CAD
                                       <strong>Experienced:</strong> SIR
-                                      <strong>Interested by by: </strong>SIR
+                                      <strong>Interested by: </strong>SIR
                                       laetitia.michel@devoteam.com
                 </div>
                   <div class="info-social">
@@ -625,7 +625,7 @@
                 <div class="info-bio">
                                       <strong>Certified:</strong> CSA / CAD / SIR
                                       <strong>Experienced: </strong> SIR
-                                      <strong>Interested by by:</strong> SecOps
+                                      <strong>Interested by:</strong> SecOps
                                       richard.kohler@devoteam.com
                 </div>
                   <div class="info-social">
