--- a/contacts.html
+++ b/contacts.html
@@ -367,6 +367,41 @@
       </div>
     </div>
     <!-- end card -->
+     <!-- start card -->
+    <div class="display-item">
+      <div class="card seamus">
+				<div class="card-top"></div>
+          <div class="card-profile">
+            <div class="profile-image">
+              <img src="./asset/contacts/richard.jpg">
+            </div>
+          </div>
+            <div class="card-info">
+              <div class="info-title">
+                <h2>Richard KOHLER</h2>
+                <h3>Senior Technical Consultant</h3>
+              </div>
+                <div class="info-bio">
+                                      <strong>Certified:</strong> CSA / CAD / SIR
+                                      <strong>Experienced: </strong> SIR
+                                      <strong>Interested by:</strong> SecOps
+                                      richard.kohler@devoteam.com
+                </div>
+                  <div class="info-social">
+                    <div class="social-icons">
+                      <button onclick="window.location.href='mailto:richard.kohler@devoteam.com'">
+                        <span class="btn-content">
+                            <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                            <span class="hover-text">Contactez-moi</span>
+                        </span>
+                    </button>
+                  </button>
+                </div>
+              </div>
+        </div>
+  </div>
+</div>
+<!-- end card -->
     <!-- start card -->
     <div class="display-item">
       <div class="card seamus">
@@ -608,41 +643,7 @@
   </div>
 </div>
 <!-- end card -->
-<!-- start card -->
-    <div class="display-item">
-      <div class="card seamus">
-				<div class="card-top"></div>
-          <div class="card-profile">
-            <div class="profile-image">
-              <img src="">
-            </div>
-          </div>
-            <div class="card-info">
-              <div class="info-title">
-                <h2>Richard KOHLER</h2>
-                <h3>Senior Technical Consultant</h3>
-              </div>
-                <div class="info-bio">
-                                      <strong>Certified:</strong> CSA / CAD / SIR
-                                      <strong>Experienced: </strong> SIR
-                                      <strong>Interested by:</strong> SecOps
-                                      richard.kohler@devoteam.com
-                </div>
-                  <div class="info-social">
-                    <div class="social-icons">
-                      <button onclick="window.location.href='mailto:richard.kohler@devoteam.com'">
-                        <span class="btn-content">
-                            <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
-                            <span class="hover-text">Contactez-moi</span>
-                        </span>
-                    </button>
-                  </button>
-                </div>
-              </div>
-        </div>
-  </div>
-</div>
-<!-- end card -->
+
 </div>
 </div>
 
