--- a/contacts.html
+++ b/contacts.html
@@ -548,17 +548,17 @@
 				<div class="card-top"></div>
           <div class="card-profile">
             <div class="profile-image">
-              <img src="">
+              <img src="./asset/contacts/robin.jpg">
             </div>
           </div>
             <div class="card-info">
               <div class="info-title">
                 <h2>Robin DEPARPE</h2>
-                <h3>Technical Consultant</h3>
+                <h3>Functional Consultant</h3>
               </div>
-                <div class="info-bio"><strong>Certified:</strong>
-                                      <strong>Experienced: </strong>
-                                      <strong>Interested by:</strong>
+                <div class="info-bio"><strong>Certified:</strong> CSA
+                                      <strong>Experienced: </strong> ITSM, SIR, GRC, IRM
+                                      <strong>Interested by:</strong> VR, GRC, IRM
                                       robin.deparpe@devoteam.com
                 </div>
                   <div class="info-social">
