maj SIR + asset

--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -264,7 +264,7 @@
     <div class="article_section_photo">
           <div class="paragraphe">
             <p>
-              <ul>NIST follows steps to 
+              <ul><strong>NIST</strong> follows steps to 
                 <li>
                   Detect
                 </li>
@@ -281,10 +281,14 @@
                   recover from a security incident.
                 </li>
               </ul>
-              <ul>NIST Statefull process definition alows analysts to move from one step to the next sequential order without skipping any step.
+              <ul><strong>NIST Statefull</strong>
+              <li> process definition alows analysts to move from one step to the next sequential order <strong>without skipping any step.</strong>
+              </li>
               </ul>
-              <ul>
-                NIST Open process definition permits analyst to move freely from one state to the next.
+              <ul><strong>NIST Open</strong>
+              <li>
+                 process definition permits analyst <strong>to move freely from one state to the next.</strong>
+              </li>
               </ul>
             </p>
           </div>
