--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -40,7 +40,7 @@
                 </li><li><a>Commercial / Pre-sales</a>
                   <ul class="submenu two">
                     <li><a href="">Sales Documents</a></li>
-                    <li><a href="https://docs.google.com/spreadsheets/d/18tVKalTtCqcvHc-AeCksx6Jge7us1-rtyIyPOyykY3M/edit?gid=508078838#gid=508078838">Estimation Helper</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/18tVKalTtCqcvHc-AeCksx6Jge7us1-rtyIyPOyykY3M/edit?gid=508078838#gid=508078838" target="_blank">Estimation Helper</a></li>
                     <li><a href="">Past projects</a></li>
                   </ul>
                 </li><li><a>Project</a>
