--- a/page_tools/tools_gemini.html
+++ b/page_tools/tools_gemini.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="../css/breadcrumb.css">
       <link rel="stylesheet" href="../css/caroussel.css">
       <link rel="stylesheet" href="../css/footer.css">
+      <link rel="stylesheet" href="../css/menu_webinars.css">
 
     <title>Security_home</title>
 </head>
@@ -36,6 +37,7 @@
                 <ul class="submenu two">
                     <li><a href="../page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
                     <li><a href="../page_tools/tools_gemini.html">Gemini Gems</a></li>
+                    <li><a href="../page_tools/tools_webinar.html">Webinars</a></li>
                     <li><a href="../page_tools/tools_templates.html">Templates</a></li>
                 </ul>
               </li><li><a>3rd Party Tools</a>
@@ -90,17 +92,140 @@
             
           </nav> <!-- Fin menu general (nav) -->
         </header>
-        <h3 class="bandeau_h3" > Knowledge Base</h3>
+        <h3 class="bandeau_h3" >GEMINI GEMS</h3>
         <!-- scroll  -->
-        <div class="scrolldown" style="--color: skyblue">
+        <!-- <div class="scrolldown" style="--color: skyblue">
           <div class="chevrons">
               <div class="chevrondown"></div>
               <div class="chevrondown"></div>
           </div>
-        </div>
+        </div> -->
         <!-- scroll end -->
+<section class="blog-single pt-125 pb-120">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <article class="blog-single__wrap"> 
+                        <div class="blog-single__content mt-10">
+  <p>
+    Gemini Gems are like having your own team of AI experts within Google's Gemini model. 
+    <br>The key is that you train them yourself, molding them with your data and preferences to become uniquely yours.
+    <br>This means you can have a Gem that can help you in scoping or in develloping solutions. 
+    <br>The more you train them,
+     the better they become at fulfilling your specific needs, making them invaluable for everything from creative
+     collaboration to tackling daily tasks. 
+     <br><strong>To set them up, simply go to
+     <a class="lien" href="https://gemini.google.com/app" target="_blank">gemini</a></strong> and navigate to Gem manager > + New Gem
+<br>
+<strong>Here are a few to get you started:</strong>
+  </p>
+</div>
+<div id="accordian">
+	<ul>
+		<li>
+			<h4><span class="icon-dashboard"><a href="#estimator">Estimator</a></span></h4>
+			
+				<!-- <ul><li><a href="#estimator">ServiceNow Project Estimator</a></li> -->
+		<!-- 		<li><a href="#">Search</a></li>
+				<li><a href="#">Graphs</a></li>
+				<li><a href="#">Settings</a></li> </ul>-->
+			
+		</li>
+		<!-- we will keep this LI open by default -->
+		<li >
+			<h4><span class="icon-tasks"><a href="#story">Story Helper</a></span></h4>
+			<!-- <ul>
+				<li><a href="#">Today's tasks</a></li>
+				<li><a href="#">Urgent</a></li>
+				<li><a href="#">Overdues</a></li>
+				<li><a href="#">Recurring</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul> -->
+		</li>
+		<li>
+			<h4><span class="icon-calendar"><a href="#process">Process Helper</a></span></h4>
+			<!-- <ul>
+				<li><a href="#">Current Month</a></li>
+				<li><a href="#">Current Week</a></li>
+				<li><a href="#">Previous Month</a></li>
+				<li><a href="#">Previous Week</a></li>
+				<li><a href="#">Next Month</a></li>
+				<li><a href="#">Next Week</a></li>
+				<li><a href="#">Team Calendar</a></li>
+				<li><a href="#">Private Calendar</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul> -->
+		</li>
+		<li>
+			<h4><span class="icon-heart"><a href="#exam">Exam Helper</a></span></h4>
+			<!-- <ul>
+				<li><a href="#">Global favs</a></li>
+				<li><a href="#">My favs</a></li>
+				<li><a href="#">Team favs</a></li>
+				<li><a href="#">Settings</a></li>
+			</ul> -->
+		</li>
+	</ul>
+</div>
+<!-- template card knowledge -->       
+<div class="knowledge">
+    <div class="knowledge_card" id="estimator">
+        <h4 class="h4_knowledge">ServiceNow Project Estimator</h4>
+            <p class="p_knowledge" >This gem will take a document such as meeting minutes / RFP / RFP and after
+               analysing it will give you an estimation of how many mandays will be required to implement the project, 
+               the estimation will be split into four categories: Project Governance, Implementation, Change Management, and Project Delivery. </p>
+                <img src="../asset/knowledge/GettyImages-1451866082.jpg" alt="Scheduled Email Notifications">
+                <a  class="more_information" href="https://docs.google.com/document/d/1SQehsIj7W_KiJ5k8PCOjBc9FzdKX5ri4iEK3ZL-I-2I/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a > 
+    </div>
+    <div class="knowledge_card"  id="story">
+        <h4 class="h4_knowledge">ServiceNow story helper</h4>
+            <p class="p_knowledge" >This gem will ingest an explanation of a customer requirement and translate it into a user story consisting of a detailled description, acceptance criteria, an high-level overview of the solution to implement and a workload estimation
 
+            </p>
+            <img src="../asset/knowledge/shutterstock_1105167263 (1).jpg" alt="Scheduled Email Notifications">
+                <a class="more_information" href="https://docs.google.com/document/d/15d-u4n-f9Zfp_CJffk7LaPP_qxHU_78xutOSMhlafR8/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card" id="process">
+        <h4 class="h4_knowledge">ServiceNow Process helper</h4>
+            <p class="p_knowledge" >This gem can help you understand specific business processes, standards and frameworks by giving a simple example or analogy and demonstrating how the ServiceNow platform can integrate such a process specifying the required plugins / applications / integrations and giving an overview of the primary tables used.
 
+            </p>
+            <img src="../asset/knowledge/process_helper.jpg" alt="Scheduled Email Notifications">
+                <a  class="more_information" href="https://docs.google.com/document/d/1_EnJajp6q6c0jKF8e8t7egWvjjYAX000LoFdCR-GYq0/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+
+    <div class="knowledge_card" id="technical">
+        <h4 class="h4_knowledge">ServiceNow Technical helper</h4>
+            <p class="p_knowledge" >This gem will help you address challenging technical requests, start by giving it a detailled description of what you are trying to achieve, it will give you a high-level step-by-step guide of how to achieve it. If you need more details about a specific step, just ask...
+
+            </p>
+            <img src="../asset/knowledge/servicenow_helper.jpg" alt="Scheduled Email Notifications">
+                <a  class="more_information" href="https://docs.google.com/document/d/1YXE7w7xMhvThjPiDrvX0OqxMxuUiakYCmT3jo6FHnw4/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card" id="exam">
+        <h4 class="h4_knowledge">ServiceNow Exam Helper</h4>
+            <p class="p_knowledge" >Preparing for a ServiceNow exam? tell this gem which exam you are preparing (Example: CIS - SIR) and it will ask you a series of practice questions while tracking your score.
+
+            </p>
+            <img src="../asset/knowledge/gemini_exam.jpg" alt="Scheduled Email Notifications">
+                <a  class="more_information" href="https://docs.google.com/document/d/1Ek0zTg4Ad6LT4hxhsfcrRjzhs7D3ZZDMhlYP6tiI7FI/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <!-- <div class="knowledge_card">
+        <h4 class="h4_knowledge">Enhancing ServiceNow SecOps SIR with Adaptive Card Integration</h4>
+            <p class="p_knowledge">This article guides SecOps consultants on customizing and implementing
+                 Adaptive Cards in ServiceNow SecOps SIR for streamlined incident response and improved collaboration. 
+            </p>
+            <img src="../asset/knowledge/ServiceNow_SecOps_Adaptive_Card.jpg" alt="Scheduled Email Notifications">
+                <a  class="more_information" href="https://docs.google.com/document/d/14EFUjCO0RZmXtIjDOTAcSwMWcijrDUFg0T5Emt3tLzo/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div> -->
+</div>
+<!-- template card knowledge -->
 </main>           
   <div class="pg-footer">
     <footer class="footer">
@@ -234,6 +359,7 @@
     </footer>
 
     <script src="../js/menu.js"></script>
+    <!-- <script src="../js/menu_webinars.js"></script> -->
       
   </body>
   </html>
