--- a/page_tools/tools_knowledgeBase.html
+++ b/page_tools/tools_knowledgeBase.html
@@ -35,6 +35,7 @@
                 <ul class="submenu two">
                     <li><a href="../page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
                     <li><a href="../page_tools/tools_gemini.html">Gemini Gems</a></li>
+                    <li><a href="../page_tools/tools_webinar.html">Webinars</a></li>
                     <li><a href="../page_tools/tools_templates.html">Templates</a></li>
                 </ul>
               </li><li><a>3rd Party Tools</a>
