--- a/pages_secops/secops_threat_intelligence.html
+++ b/pages_secops/secops_threat_intelligence.html
@@ -38,7 +38,7 @@
                 </li><li><a>Commercial / Pre-sales</a>
                   <ul class="submenu two">
                     <li><a href="">Sales Documents</a></li>
-                    <li><a href="">Estimation Helper</a></li>
+                    <li><a href="https://docs.google.com/spreadsheets/d/18tVKalTtCqcvHc-AeCksx6Jge7us1-rtyIyPOyykY3M/edit?gid=508078838#gid=508078838" target="_blank">Estimation Helper</a></li>
                     <li><a href="">Past projects</a></li>
                   </ul>
                 </li><li><a>Project</a>
@@ -51,9 +51,10 @@
                   </ul>
                 </li><li><a href="../page_tools/tools_knowledgeBase.html">Our Tools</a>
                   <ul class="submenu four">
-                    <li><a>Knowledge base</a></li>
-                    <li><a>Gemini Gems</a></li>
-                    <li><a>Templates</a></li>
+                    <li><a href="../page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
+                    <li><a href="../page_tools/tools_gemini.html">Gemini Gems</a></li>
+                    <li><a href="../page_tools/tools_webinar.html">Webinars</a></li>
+                    <li><a href="../page_tools/tools_templates.html">Templates</a></li>
                   </ul>
                 </li><li><a href="../contacts.html">Contacts</a>
                   <!-- <ul class="submenu five">
@@ -298,6 +299,9 @@
               <li class="menu-item menu-item-type-custom menu-item-object-custom">
                 <a target="_blank" rel="noopener noreferrer" href="../page_tools/tools_gemini.html">Gemini Gems</a>
               </li>
+              <li class="menu-item menu-item-type-custom menu-item-object-custom">
+              <a target="_blank" rel="noopener noreferrer" href="../page_tools/tools_webinar.html">Webinars</a>
+            </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page">
                 <a href="../page_tools/tools_templates.html">Templates</a>
               </li>
