--- a/contacts.html
+++ b/contacts.html
@@ -52,6 +52,7 @@
                 <ul class="submenu four">
                   <li><a href="./page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
                   <li><a href="./page_tools/tools_gemini.html">Gemini Gems</a></li>
+                  <li><a href="./page_tools/tools_webinar.html">Webinars</a></li>
                   <li><a href="./page_tools/tools_templates.html">Templates</a></li>
                 </ul>
               </li><li><a>Contacts</a>
@@ -716,6 +717,9 @@
             </li>
             <li class="menu-item menu-item-type-custom menu-item-object-custom">
               <a target="_blank" rel="noopener noreferrer" href="./page_tools/tools_gemini.html">Gemini Gems</a>
+            </li>
+            <li class="menu-item menu-item-type-custom menu-item-object-custom">
+              <a target="_blank" rel="noopener noreferrer" href="../page_tools/tools_webinar.html">Webinars</a>
             </li>
             <li class="menu-item menu-item-type-post_type menu-item-object-page">
               <a href="./page_tools/tools_templates.html">Templates</a>
