--- a/page_tools/tools_gemini.html
+++ b/page_tools/tools_gemini.html
@@ -298,6 +298,9 @@
               <li class="menu-item menu-item-type-custom menu-item-object-custom">
                 <a target="_blank" rel="noopener noreferrer" href="../page_tools/tools_gemini.html">Gemini Gems</a>
               </li>
+              <li class="menu-item menu-item-type-custom menu-item-object-custom">
+              <a target="_blank" rel="noopener noreferrer" href="../page_tools/tools_webinar.html">Webinars</a>
+            </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page">
                 <a href="../page_tools/tools_templates.html">Templates</a>
               </li>
