--- a/page_tools/tools_webinar.html
+++ b/page_tools/tools_webinar.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         <!-- scroll end -->
-<div>
+<div class="video">
     <video src="https://www.youtube.com/watch?v=ZrSaklr-NqE" controls width="700">
 </video>
 </div>
